# FireRed-Injector

./: .gitignore  README.md  cli.py  config.example.toml  config.py  install.sh  main.py  poetry-check.sh  pyproject.toml
.github/workflows/: ci.yaml
gba_rom/: README.md
lua/: hook.lua
src/cli/: extract_cmd.py  ipc_cmd.py  llm_cmd.py  parser.py
src/codecs/: base.py  gen3.py  tables.py
src/config/: settings.py
src/extractors/: base.py  dialog.py
src/ipc/: base.py  file_backend.py  file_ipc.py  service.py
src/llm/: base.py  character_card.py  dialogue_generator.py  factory.py  generate_dialog.py  llama_client.py  prompt_builder.py
src/llm/providers/: dummy.py  llama.py
src/loaders/: base.py  rom_loader.py
src/rom/: dialog_extractor.py  rom_loader.py  text_decoder.py  text_tables.py
src/utils/: format.py  io.py
tests/: conftest.py  test_file_ipc.py  test_gen3_text_decode.py  test_settings.py
